--- a/tests/test.env
+++ b/tests/test.env
@@ -2,6 +2,8 @@
 TEST = "config"
 TESTINT1 = 1
 TESTINT2 = "1"
+TESTBOOL1 = true
+TESTBOOL2 = false
 # replace test
 REPLACE1 = "${__DIR__}/1"
 REPLACE2 = "${REPLACE1}/2"
