--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     ],
     "require": {
         "php" : ">=5.4.0",
-        "vakata/kvstore" : ">=1.0.2"
+        "vakata/kvstore" : ">=1.0.2",
+        "symfony/yaml" : "3.*"
     },
     "require-dev": {
         "phpunit/phpunit" : "4.*",
