--- a/composer.json
+++ b/composer.json
@@ -15,21 +15,12 @@
             "role": "Developer"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/vakata/phpdoc-md"
-        }
-    ],
     "require": {
-        "php" : ">=5.4.0",
-        "vakata/kvstore" : ">=1.0.2",
-        "symfony/yaml" : "3.*"
+        "php" : ">=7.0",
+        "vakata/kvstore" : ">=1.0.2"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*",
-        "codeclimate/php-test-reporter": "dev-master",
-        "clean/phpdoc-md": "dev-master"
+        "phpunit/phpunit" : "4.*"
     },
     "autoload": {
         "psr-4": {
