--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "vakata/kvstore" : ">=1.0.2"
     },
     "require-dev": {
-        "phpunit/phpunit" : "4.*"
+        "phpunit/phpunit" : "4.*",
+        "clean/phpdoc-md": "*"
     },
     "autoload": {
         "psr-4": {
